# spopy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  spopy  spopy.py  spotify_cli.py
.github/workflows/: lint.yml  publish.yml  release.yml
ai_docs/: spotify_api_research.md
ai_specs/: implementation_plan.md  spotify_cli_spec.md
docs/: CNAME  index.html
docs/callback/: index.html
skills/spopy/: SKILL.md
skills/spotify-cli/: SKILL.md
