[project]
name = "spopy"
version = "0.3.0"
description = "A production-quality Spotify CLI in a single Python file"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Amit Kotlovski" },
]
keywords = ["spotify", "cli", "music", "terminal", "spotipy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "spotipy==2.26.0",
    "typer==0.24.1",
    "rich==14.3.3",
]

[project.urls]
Homepage = "https://spopy.amitkot.com"
Repository = "https://github.com/amitkot/spopy"
Changelog = "https://github.com/amitkot/spopy/blob/main/CHANGELOG.md"

[project.scripts]
spopy = "spopy:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["spopy.py"]

[tool.hatch.build.targets.sdist]
only-include = ["spopy.py", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",  # module-level import after warnings.filterwarnings
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
invalid-assignment = "ignore"   # SpotifyPKCE._code_verifier private attr access
unresolved-attribute = "ignore" # SpotifyPKCE._code_verifier private attr access

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
